# glt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  main.cpp  shaderHeaderGenerator.cpp  vcpkg.json
include/: AnimatedFloat.hpp  align.hpp  animation.hpp  atlas.hpp  batch.hpp  borderRadius.hpp  borderWidth.hpp  box.hpp  boxData.hpp  button.hpp  checkbox.hpp  child.hpp  color.hpp  column.hpp  container.hpp  contextMenu.hpp  dialog.hpp  dropdownButton.hpp  expander.hpp  fontIcon.hpp  fontStore.hpp  gestureDetector.hpp  image.hpp  imageData.hpp  inputQueue.hpp  inputState.hpp  layoutInspector.hpp  layoutInspectorData.hpp  margin.hpp  modal.hpp  navigationMenu.hpp  navigationView.hpp  navigator.hpp  networking.hpp  numberBox.hpp  observer.hpp  overlay.hpp  performanceOverlay.hpp  quad.hpp  rebuilder.hpp  (+34 more)
include/core/: alignment.hpp  animated.cpp  animated.hpp  animationController.hpp  app.cpp  app.hpp  axis.hpp  boxConstraints.hpp  child.hpp  concepts.hpp  core.hpp  curve.hpp  direction.hpp  element.cpp  element.hpp  forwards.hpp  inheritedWidget.hpp  inputState.cpp  inputState.hpp  key.cpp  key.hpp  renderObject.cpp  renderObject.hpp  slot.hpp  state.cpp  state.hpp  widget.hpp
include/engine/: buffer.hpp  commandQueue.hpp  engine.hpp  frame.hpp  getterSetter.hpp  inspectorQuad.hpp  instance.hpp  loader.hpp  pipeline.hpp  quad.hpp  samplerUniform.hpp  shader.hpp  textQuad.hpp  texture.hpp  texturedQuad.hpp  uniform.hpp  utils.hpp  vulkan.cpp  vulkan.hpp  vulkanIncludes.hpp  window.hpp
include/image/: data.cpp  data.hpp  loader.cpp  provider.cpp  provider.hpp
include/store/: pipeline.hpp  sampler.hpp  texture.hpp
include/text/: provider.cpp  provider.hpp
include/widgets/: animatedBox.cpp  animatedBox.hpp  animatedText.cpp  animatedText.hpp  box.cpp  box.hpp  builder.hpp  button.cpp  button.hpp  card.cpp  card.hpp  column.hpp  container.cpp  container.hpp  contentSizingOverride.cpp  contentSizingOverride.hpp  contextMenu.cpp  contextMenu.hpp  dialog.cpp  dialog.hpp  dropdownButton.cpp  dropdownButton.hpp  expander.cpp  expander.hpp  flex.cpp  flex.hpp  fontIcon.cpp  fontIcon.hpp  gestureDetector.cpp  gestureDetector.hpp  grid.cpp  grid.hpp  iconButton.cpp  iconButton.hpp  image.cpp  image.hpp  layoutBuilder.hpp  layoutInspector.cpp  layoutInspector.hpp  liteFilter.cpp  (+47 more)
include/widgets/misc/: gestureEnums.hpp  multilineTextEditor.cpp  multilineTextEditor.hpp  scrollViewData.hpp  textEditor.cpp  textEditor.hpp
src/: AnimatedFloat.cpp  align.cpp  animation.cpp  atlas.cpp  batch.cpp  borderRadius.cpp  borderWidth.cpp  box.cpp  button.cpp  checkbox.cpp  child.cpp  color.cpp  column.cpp  container.cpp  contextMenu.cpp  dialog.cpp  dropdownButton.cpp  expander.cpp  fontIcon.cpp  fontStore.cpp  fontStoreDefaultFonts.cpp  gestureDetector.cpp  image.cpp  imageLoader.cpp  imageLoader.hpp  inputQueue.cpp  inputState.cpp  layoutInspector.cpp  margin.cpp  modal.cpp  navigationView.cpp  navigationmenu.cpp  navigator.cpp  networking.cpp  numberBox.cpp  overlay.cpp  performanceOverlay.cpp  quad.cpp  rebuilder.cpp  rect.cpp  (+24 more)
src/engine/: engine.cpp  frame.cpp  instance.cpp  shader.cpp  texture.cpp  uniform.cpp  window.cpp
src/engine/shaders/: inspectorQuad.frag  inspectorQuad.vert  rect.frag  rect.vert  textRect.frag  textRect.vert  texturedRect.frag  texturedRect.vert
src/widgets/: iconButton.cpp  liteFilter.cpp  paginator.cpp  slider.cpp  toggleButton.cpp  toggleSwitch.cpp
tests/: testColumn.cc  testFontStore.cc  testGridSpec.md  testLayoutSpec.md  testRow.cc  testRowSpec.md  testText.cc  testWidget.cc
